# trench

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  ralph
src/: adopt.rs  exit_code.rs  live_worktree.rs  logging.rs  main.rs  paths.rs  process.rs  tmux.rs
src/cli/commands/: completions.rs  create.rs  init.rs  list.rs  log.rs  mod.rs  open.rs  remove.rs  shell_init.rs  status.rs  switch.rs  sync.rs  tag.rs
src/config/: mod.rs
src/git/: mod.rs
src/hooks/: copy.rs  mod.rs  run.rs  runner.rs  shell.rs  stream.rs  types.rs
src/output/: json.rs  mod.rs  porcelain.rs  table.rs
src/state/: mod.rs  queries.rs
src/state/sql/: 001_initial_schema.sql  002_add_removed_at.sql  003_add_step_to_logs.sql
src/tui/: chrome.rs  mod.rs  theme.rs  watcher.rs
src/tui/screens/: create.rs  delete_confirm.rs  detail.rs  help.rs  hook_log.rs  list.rs  mod.rs  sync_picker.rs
tests/: exit_codes.rs  log_command.rs
