[package]
name = "trench"
version = "0.1.0"
edition = "2021"
description = "A fast, ergonomic, headless-first Git worktree manager"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "cargo"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { version = "1", features = ["full"] }

# Git
git2 = "0.19"

# Config
toml = "0.8"
serde = { version = "1", features = ["derive"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"

# Errors
anyhow = "1"
thiserror = "2"

# Serialization
serde_json = "1"

# Templates
minijinja = "2"

# Globs
globset = "0.4"

# Paths
dirs = "6"

# Watch
notify = "7"

[dev-dependencies]
tempfile = "3.26.0"
